fix: fix hamburger dropdown overflow

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -6,6 +6,6 @@
 #app {
   width: 100%;
   display: flex;
-  gap: 35px;
+  // gap: 35px;
   font-family: var(--main-font-family);
 }
